<resources>
    <string name="app_name">My first Android app</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short!</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Bill Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_login">Login</string>

    <string name="action_settings">Settings</string>
    <string name="Lena">Lena</string>
    <string name="welcome_page">the Bill Splitter App</string>
    <string name="welcome_message">Welcome to my app!</string>
    <string name="welcome_howItWorks">How it works?</string>
    <string name="welcome_discription">Just open the menu on the left top and choose one of the features. It can make calculations of the monthly rent, you can take photos of the bills,
        save them on the cloud and also sending it per email!
        In the Settings you can manage data and also sharing all information per Facebook messenger;)
        \n\n I hope you will enjoy it! \n\nLena</string>
    <string name="how_much">How much is the monthly rent?</string>
    <string name="let_me_know">Let me know</string>
    <string name="button_calculate">Calculate</string>
    <string name="login_menu_item">Login</string>
    <string name="menu_galery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_about_the_calculation">About the calculation</string>
    <string name="facebook_app_id">249280585594134</string>
    <string name="takePicture">Take a photo</string>
    <string name="takePictureOnMenu">Take a photo of the bill</string>
    <string name="title_activity_taking_picture">Camera</string>
    <string name="title_activity_gallery">the Gallery</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="calculate">Calculate monthly rent</string>
    <string name="menu_login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot your password?</string>

    <string name="title_activity_bill_splitter">the Bill Splitter app</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="button_logout">Logout</string>
    <string name="send_email">Send per email</string>
    <string name="btn_go_back">GO BACK</string>
</resources>
