<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@drawable/calculator_flower_bg"
    android:orientation="vertical"
    tools:context=".calculator.CalculatorActivity">

    <TextView
        android:id="@+id/how_much"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/how_much"
        android:textColor="#181818"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_much">

        <EditText
            android:id="@+id/editInput"
            android:layout_width="220dp"
            android:layout_height="64dp"
            android:alpha="0.6"
            android:background="@drawable/rounded_grey_box_background"
            android:hint="@string/let_me_know"

            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textColorHint="#262626"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="81dp" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_purple_button"
        android:text="@string/button_calculate"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_back"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/go_back_button"
        android:drawableStart="@drawable/go_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
